--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tanstack/vue-query": "^4.24.4",
     "pinia": "^2.0.33",
+    "swiper": "^9.1.1",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
@@ -26,7 +27,6 @@
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.13",
-    "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.20",
